fixes spacing on pages and tags page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -163,7 +163,7 @@ h4 {
 }
 
 div {
-    --flow-space: 1.7rem;
+    --flow-space: 1rem;
 }
 
 p {
